--- a/Project/app/src/main/res/layout/activity_login.xml
+++ b/Project/app/src/main/res/layout/activity_login.xml
@@ -6,81 +6,105 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/action_bar_color"
+    android:layout_weight="11"
     tools:context=".LoginActivity">
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:src="@drawable/r2s_logo"
-        android:layout_margin="10dp" />
+        android:padding="10dp" />
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/login_tile"
-        android:textAlignment="center"
+        android:layout_height="0dp"
+        android:layout_weight="2"
         android:fontFamily="sans-serif-medium"
-        android:padding="30dp"
+        android:text="@string/login_tile"
+        android:gravity="center_horizontal|center_vertical"
         android:textColor="@color/white"
-        android:textSize="30dp"
+        android:textSize="50dp"
         android:textStyle="bold" />
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:hint="@string/username_hint"
+        android:paddingLeft="20dp"
         android:inputType="textEmailAddress"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
+        android:textStyle="bold"
         android:id="@+id/edt_email"/>
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:paddingLeft="20dp"
+        android:layout_weight="0.5"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:text="@string/error_username"
-        android:visibility="invisible"
-        />
-
+        android:visibility="invisible" />
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:hint="@string/pass_hint"
+        android:paddingLeft="20dp"
         android:inputType="textPassword"
-
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:privateImeOptions="nm"
+        android:textStyle="bold"
         android:id="@+id/edt_password"/>
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:text="@string/error_pass"
         android:visibility="invisible"
         />
     <Spinner
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:entries="@array/array_role"
-        android:drawSelectorOnTop="true"
+
+        style="@style/spinner_style"
         />
+
     <CheckBox
-        android:layout_width="wrap_content"
+        android:id="@+id/cb_remember_me"
+        android:layout_width="220dp"
+        android:layout_height="0dp"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:layout_weight="1"
+        android:text="@string/remember_pass"
+        android:textSize="15dp"
+        android:textStyle="bold" />
+
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_sign_in"
+        android:layout_width="150dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:textSize="20dp"
+        android:textColor="@color/action_bar_color"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:background="@drawable/item_format"
+        android:text="@string/login_button" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Remember Me"
-        android:layout_marginLeft="20dp"
-        android:layout_marginBottom="25dp"
-        android:id="@+id/cb_remember_me"/>
-
-
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_sign_in"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Sign In"
-            android:background="@drawable/item_format"
-             />
-
-
+        android:layout_weight="1.5"
+        />
 
 </LinearLayout>
