--- a/Project/app/src/main/res/values/style.xml
+++ b/Project/app/src/main/res/values/style.xml
@@ -23,4 +23,15 @@
         <item name="cornerSize">50%</item>
     </style>
 
+    <style name="spinner_style">
+        <item name="android:background">@drawable/gradient_spinner</item>
+        <item name="android:layout_marginRight">20dp</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:popupBackground">#DFFFFFFF</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingLeft">20dp</item>
+
+    </style>
+
+    <string name="login_button">LOGIN</string>
 </resources>
