--- a/Project/app/src/main/res/layout/app_bar_main.xml
+++ b/Project/app/src/main/res/layout/app_bar_main.xml
@@ -16,7 +16,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/action_bar_color"
+            android:background="@color/main_color"
             android:padding="8dp"
             app:navigationIcon="@drawable/ic_menu"
             app:popupTheme="@style/Theme.Project.PopupOverlay">
