--- a/Project/app/src/main/res/layout/item_assignment.xml
+++ b/Project/app/src/main/res/layout/item_assignment.xml
@@ -94,9 +94,9 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 style="@style/TextViewStyle"
@@ -133,7 +133,8 @@
             android:insetTop="0dp"
             android:insetRight="0dp"
             android:insetBottom="0dp"
-            app:shapeAppearanceOverlay="@style/ButtonRounded" />
+            app:shapeAppearanceOverlay="@style/ButtonRounded"
+            android:backgroundTint="@color/edit_button_color"/>
 
         <com.google.android.material.button.MaterialButton
             android:layout_width="48dp"
@@ -146,7 +147,8 @@
             android:insetTop="0dp"
             android:insetRight="0dp"
             android:insetBottom="0dp"
-            app:shapeAppearanceOverlay="@style/ButtonRounded" />
+            app:shapeAppearanceOverlay="@style/ButtonRounded"
+            android:backgroundTint="@color/delete_button_color"/>
 
     </LinearLayout>
 
