--- a/Project/app/src/main/res/values/colors.xml
+++ b/Project/app/src/main/res/values/colors.xml
@@ -8,9 +8,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="action_bar_color">#fd3c01</color>
-    <color name="item_color">#ffeacb</color>
-    <color name="btn1_color">#3466ff</color>
-    <color name="btn2_color">#51f656</color>
+    <color name="main_color">#fd3c01</color>
+    <color name="item_background">#ffeacb</color>
+    <color name="add_button_color">#3466ff</color>
+    <color name="edit_button_color">#51f656</color>
+    <color name="delete_button_color">#ff0000</color>
+    <color name="search_box_border">#ffe066</color>
+
 
 </resources>
