--- a/Project/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Project/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
+    <item android:title="">
+        <menu>
+
+        </menu>
+    </item>
+
     <group android:checkableBehavior="single">
 
         <item
