--- a/Project/app/src/main/res/drawable/common_box.xml
+++ b/Project/app/src/main/res/drawable/common_box.xml
@@ -4,18 +4,18 @@
 
     <!-- View background color -->
     <solid
-        android:color="@color/item_background" >
+        android:color="@color/white">
     </solid>
 
     <!-- View border color and width -->
     <stroke
-        android:width="1dp"
-        android:color="@color/item_background">
+        android:width="2dp"
+        android:color="@color/gray">
     </stroke>
 
     <!-- The radius makes the corners rounded -->
     <corners
-        android:radius="40dp">
+        android:radius="5dp">
     </corners>
 
 </shape>
