--- a/Project/app/src/main/res/values/colors.xml
+++ b/Project/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#737373</color>
 
     <color name="main_color">#fd3c01</color>
     <color name="item_background">#ffeacb</color>
