--- a/Project/app/src/main/res/layout/edit_assignment.xml
+++ b/Project/app/src/main/res/layout/edit_assignment.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Assignment"
+        android:text="Edit Assignment"
         android:padding="30dp"
         android:textSize="35sp"
         android:textStyle="bold"
@@ -24,38 +24,19 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Module Name:"
+            android:text="Class ID"
             android:textSize="17sp"
-            android:textStyle="bold"
-            android:paddingBottom="5dp"/>
+            android:textStyle="bold"/>
 
-        <RelativeLayout
+        <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="45sp"
+            android:ems="10"
             android:layout_weight="1"
             android:background="@drawable/common_box"
-            android:orientation="horizontal">
-
-            <Spinner
-                android:id="@+id/spinner_module"
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:background="@android:color/transparent"
-                android:gravity="center"
-                android:layout_marginLeft="5dp"
-                android:spinnerMode="dropdown" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_baseline_arrow_drop_down_24" />
-
-        </RelativeLayout>
+            android:paddingLeft="10dp"
+            android:enabled="false"
+            android:textStyle="bold"/>
 
     </LinearLayout>
 
@@ -70,10 +51,90 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Class Name:"
+            android:text="Class Name"
             android:textSize="17sp"
-            android:textStyle="bold"
-            android:paddingBottom="5dp"/>
+            android:textStyle="bold"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="45sp"
+            android:ems="10"
+            android:layout_weight="1"
+            android:background="@drawable/common_box"
+            android:paddingLeft="10dp"
+            android:enabled="false"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingLeft="40dp"
+        android:paddingRight="30dp"
+        android:paddingBottom="30dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Module ID"
+            android:textSize="17sp"
+            android:textStyle="bold"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="45sp"
+            android:ems="10"
+            android:layout_weight="1"
+            android:background="@drawable/common_box"
+            android:paddingLeft="10dp"
+            android:enabled="false"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingLeft="40dp"
+        android:paddingRight="30dp"
+        android:paddingBottom="30dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Module Name"
+            android:textSize="17sp"
+            android:textStyle="bold"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="45sp"
+            android:ems="10"
+            android:layout_weight="1"
+            android:background="@drawable/common_box"
+            android:paddingLeft="10dp"
+            android:enabled="false"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingLeft="40dp"
+        android:paddingRight="30dp"
+        android:paddingBottom="30dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Trainer ID"
+            android:textSize="17sp"
+            android:textStyle="bold"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -93,59 +154,26 @@
                 android:layout_marginLeft="5dp"
                 android:spinnerMode="dropdown"/>
 
-            <ImageView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_baseline_arrow_drop_down_24" />
+                android:layout_centerVertical="true">
 
-        </RelativeLayout>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_arrow_drop_up_24"
+                    android:layout_marginBottom="-6dp"/>
 
-    </LinearLayout>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_arrow_drop_down_24"
+                    android:layout_marginTop="-6dp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="40dp"
-        android:paddingRight="30dp"
-        android:paddingBottom="30dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Trainer ID:"
-            android:textSize="17sp"
-            android:textStyle="bold"
-            android:paddingBottom="5dp"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/common_box"
-            android:orientation="horizontal">
-
-            <Spinner
-                android:id="@+id/spinner_trainer"
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:background="@android:color/transparent"
-                android:gravity="center"
-                android:layout_marginLeft="5dp"
-                android:spinnerMode="dropdown" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_baseline_arrow_drop_down_24" />
+            </LinearLayout>
 
         </RelativeLayout>
 
