list question and some edit UI

--- a/Project/app/src/main/res/layout/edit_assignment.xml
+++ b/Project/app/src/main/res/layout/edit_assignment.xml
@@ -165,13 +165,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_baseline_arrow_drop_up_24"
-                    android:layout_marginBottom="-6dp"/>
+                    android:layout_marginBottom="-3dp"
+                    android:layout_marginTop="-17dp"/>
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_baseline_arrow_drop_down_24"
-                    android:layout_marginTop="-6dp"/>
+                    android:layout_marginTop="-15dp"/>
 
             </LinearLayout>
 
