--- a/Project/app/src/main/res/layout/add_assignment.xml
+++ b/Project/app/src/main/res/layout/add_assignment.xml
@@ -52,7 +52,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:layout_gravity="center"
+                android:layout_gravity="top"
+                android:paddingBottom="15dp"
                 android:src="@drawable/ic_baseline_arrow_drop_down_24" />
 
         </RelativeLayout>
@@ -99,6 +100,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center"
+                android:paddingBottom="15dp"
                 android:src="@drawable/ic_baseline_arrow_drop_down_24" />
 
         </RelativeLayout>
@@ -145,6 +147,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center"
+                android:paddingBottom="15dp"
                 android:src="@drawable/ic_baseline_arrow_drop_down_24" />
 
         </RelativeLayout>
