--- a/Project/app/src/main/res/layout/fragment_assignment.xml
+++ b/Project/app/src/main/res/layout/fragment_assignment.xml
@@ -30,10 +30,10 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:id="@+id/btn_add_assignment"
-                style="@style/Widget.MaterialComponents.Button.Icon"
-                app:icon="@drawable/ic_menu_camera"
-                app:iconSize="24dp"
+                app:icon="@drawable/ic_baseline_add_24"
+                app:iconSize="40dp"
                 app:iconPadding="0dp"
+                android:paddingLeft="4dp"
                 android:insetLeft="0dp"
                 android:insetTop="0dp"
                 android:insetRight="0dp"
