--- a/Project/app/src/main/res/layout/fragment_question.xml
+++ b/Project/app/src/main/res/layout/fragment_question.xml
@@ -29,7 +29,7 @@
             <com.google.android.material.button.MaterialButton
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:id="@+id/btn_add_assignment"
+                android:id="@+id/btn_add_question"
                 app:icon="@drawable/ic_baseline_add_24"
                 app:iconSize="40dp"
                 app:iconPadding="0dp"
@@ -106,7 +106,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcv_assignment"
+        android:id="@+id/rcv_question"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="5dp"/>
