--- a/Project/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Project/app/src/main/res/navigation/mobile_navigation.xml
@@ -73,7 +73,11 @@
         android:id="@+id/nav_question"
         android:name="com.gaf.project.fragment.QuestionFragment"
         android:label="fragment_question"
-        tools:layout="@layout/fragment_question" />
+        tools:layout="@layout/fragment_question" >
+        <action
+            android:id="@+id/action_nav_question_to_add_question_fragment"
+            app:destination="@id/add_question_fragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/add_feedback_fragment"
@@ -86,5 +90,9 @@
         android:name="com.gaf.project.fragment.AddAssignmentFragment"
         android:label="AddAssignmentFragment"
         tools:layout="@layout/add_assignment"/>
+    <fragment
+        android:id="@+id/add_question_fragment"
+        android:name="com.gaf.project.fragment.AddQuestionFragment"
+        android:label="AddQuestionFragment" />
 
 </navigation>
