--- a/Project/app/src/main/res/layout/item_class.xml
+++ b/Project/app/src/main/res/layout/item_class.xml
@@ -66,7 +66,7 @@
                 android:text="Capacity" />
 
             <TextView
-                android:id="@+id/txt_capaity"
+                android:id="@+id/txt_capacity"
                 style="@style/TextItemStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -85,7 +85,7 @@
                 android:text="Start Date: " />
 
             <TextView
-                android:id="@+id/txt_class_start_date"
+                android:id="@+id/txt_start_date"
                 style="@style/TextItemStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -103,7 +103,7 @@
                 android:text="End Date: " />
 
             <TextView
-                android:id="@+id/txt_class_end_date"
+                android:id="@+id/txt_end_date"
                 style="@style/TextItemStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -121,7 +121,7 @@
         android:layout_alignParentRight="true">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_add_class"
+            android:id="@+id/btn_edit_class"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginBottom="5dp"
@@ -137,7 +137,7 @@
             android:backgroundTint="@color/edit_button_color"/>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_edit_class"
+            android:id="@+id/btn_delete_class"
             android:layout_width="48dp"
             android:layout_height="48dp"
             style="@style/Widget.MaterialComponents.Button.Icon"
