--- a/Project/app/src/main/res/layout/activity_login.xml
+++ b/Project/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     android:background="@color/main_color"
     android:layout_weight="11"
+    android:windowActionBar="false"
     tools:context=".LoginActivity">
 
     <ImageView
