--- a/Project/app/src/main/res/layout/fragment_add_class.xml
+++ b/Project/app/src/main/res/layout/fragment_add_class.xml
@@ -37,7 +37,9 @@
             android:layout_height="45dp"
             android:id="@+id/txt_class_name"
             android:layout_gravity="center"
-
+            android:paddingLeft="5dp"
+            android:inputType="text"
+            android:imeOptions="actionDone"
             android:hint="Class name"/>
     </LinearLayout>
 
@@ -61,6 +63,9 @@
             android:background="@drawable/common_box"
             android:layout_width="match_parent"
             android:layout_height="45dp"
+            android:paddingLeft="5dp"
+            android:inputType="text"
+            android:imeOptions="actionDone"
             android:id="@+id/txt_capacity"
             android:layout_gravity="center"
             android:hint="Capacity"/>
@@ -101,7 +106,7 @@
                 android:background="@android:color/transparent"
                 android:hint="mm/dd/yyyy" />
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/btn_add_start_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -146,7 +151,7 @@
                 android:background="@android:color/transparent"
                 android:hint="mm/dd/yyyy" />
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/btn_add_end_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
