--- a/Project/app/src/main/res/values/colors.xml
+++ b/Project/app/src/main/res/values/colors.xml
@@ -8,6 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#737373</color>
+    <color name="red">#ff0403</color>
+    <color name="blue">#3466ff</color>
+    <color name="green">#51f656</color>
 
     <color name="main_color">#fd3c01</color>
     <color name="item_background">#ffeacb</color>
