--- a/Project/app/src/main/res/layout/successful_dialog.xml
+++ b/Project/app/src/main/res/layout/successful_dialog.xml
@@ -19,6 +19,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/txt_success_dialog_message"
         android:layout_gravity="center"
+        android:textStyle="bold"
+        android:textSize="25sp"
         android:text="Success"/>
 
 
