--- a/Project/app/src/main/res/layout/fail_dialog.xml
+++ b/Project/app/src/main/res/layout/fail_dialog.xml
@@ -19,7 +19,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/txt_fail_dialog_message"
         android:layout_gravity="center"
-        android:text="Fail"/>
+        android:text="Fail"
+        android:textSize="25sp"
+        android:textStyle="bold"/>
 
     <Button
         android:layout_width="wrap_content"
